add ui using vuex and implement cron job using aws sns when due date is come

--- a/client/index.html
+++ b/client/index.html
@@ -5,7 +5,7 @@
     <title>Fancy-Todo</title>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
   </head>
-  <body>
+  <body style="margin:0px;">
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
